--- a/public/investment_properties_pages/closing_costs.html
+++ b/public/investment_properties_pages/closing_costs.html
@@ -67,7 +67,7 @@
     <span class="col-md-6 align-right">{{rental_property.closing_cost.wire_charges | currency}}</span>
   </div>
   <div id="total-closing-costs" class="row">
-    <span class="col-md-18">Total</span>
-    <span class="col-md-6 align-right">{{total | currency}}</span>
+    <span class="col-md-18 add-border-top">Total</span>
+    <span class="col-md-6 align-right add-border-top">{{total | currency}}</span>
   </div>
 </div>
