--- a/public/investment_properties_pages/net_operating_income.html
+++ b/public/investment_properties_pages/net_operating_income.html
@@ -14,12 +14,12 @@
   <div class="row">
     <div class="col-md-5">Depreciation Expenses - Building</div>
     <div class="col-md-2"></div>
-    <div class="col-md-2 align-right">{{monthly_building_depreciation | currency:'$':0}}</div>
-    <div class="col-md-3 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
-    <div class="col-md-3 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
-    <div class="col-md-3 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
-    <div class="col-md-3 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
-    <div class="col-md-3 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
+    <div class="col-md-2 align-right add-border-bottom">{{monthly_building_depreciation | currency:'$':0}}</div>
+    <div class="col-md-3 align-right add-border-bottom">{{annual_building_depreciation | currency:'$':0}}</div>
+    <div class="col-md-3 align-right add-border-bottom">{{annual_building_depreciation | currency:'$':0}}</div>
+    <div class="col-md-3 align-right add-border-bottom">{{annual_building_depreciation | currency:'$':0}}</div>
+    <div class="col-md-3 align-right add-border-bottom">{{annual_building_depreciation | currency:'$':0}}</div>
+    <div class="col-md-3 align-right add-border-bottom">{{annual_building_depreciation | currency:'$':0}}</div>
   </div>
   <div class="row">
     <div class="col-md-5">Net Income Before Taxes</div>
@@ -30,8 +30,8 @@
   <div class="row">
     <div class="col-md-5">Income Tax Rate</div>
     <div class="col-md-2 align-right">{{income_tax_rate | percentage:0}}</div>
-    <div class="col-md-2 align-right">{{monthly_taxes | currency:'$':0}}</div>
-    <div class="col-md-3 align-right" ng-repeat="taxes in annual_taxes track by $index">{{taxes | currency:'$':0}}</div>
+    <div class="col-md-2 align-right add-border-bottom">{{monthly_taxes | currency:'$':0}}</div>
+    <div class="col-md-3 align-right add-border-bottom" ng-repeat="taxes in annual_taxes track by $index">{{taxes | currency:'$':0}}</div>
   </div>
   <div class="row">
     <div class="col-md-5">Net Income After Taxes</div>
