--- a/public/investment_properties_pages/property_and_loan_information.html
+++ b/public/investment_properties_pages/property_and_loan_information.html
@@ -1,6 +1,6 @@
 <div id="property-and-loan-information">
   <div class="row">
-    <div class="col-md-24 subsection-header">Inputs</div>
+    <div class="col-md-24 subsection-header">Property and Loan Information</div>
   </div>
   <div id="land-cost" class="row">
     <span class="col-md-18">Land Cost</span>
