--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -1,16 +1,6 @@
 <div id="financing-and-income-assumptions" class="container grid-24-across">
-  <div class="row">
-    <button class="btn btn-primary btn-sm" ng-click="save()">Save</button>
-    <div>{{persistenceState}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-24 subsection-header">Financing and Income Assumptions</div>
-  </div>
   <div class="col-md-6">
-    <property-and-loan-information></property-and-loan-information>
-    <operating-expenses-inputs></operating-expenses-inputs>
-    <income-and-cost-projections></income-and-cost-projections>
-    <closing-costs-inputs></closing-costs-inputs>
+    <inputs></inputs>
   </div>
   <div class="col-md-18">
     <div class="row">
