--- a/public/investment_properties_pages/operating_expenses.html
+++ b/public/investment_properties_pages/operating_expenses.html
@@ -2,5 +2,6 @@
   <div class="row">
     <div class="col-md-5 align-center subsection-header">Operating Expenses</div>
   </div>
-  <operating-expense expense="expense" ng-repeat="expense in expenses"></operating-expense>
+  <operating-expense expense="expense" ng-repeat="expense in individual_expenses"></operating-expense>
+  <operating-expense expense="total_expenses" add-border="true"></operating-expense>
 </div>
