--- a/public/investment_properties_pages/operating_revenues.html
+++ b/public/investment_properties_pages/operating_revenues.html
@@ -1,18 +1,16 @@
 <div id="operating-revenues" class="top-padded">
   <div>
     <div class="row">
-      <div class="col-md-2 col-md-offset-7 subsection-header align-center double-height">Actual Monthly</div>
-      <div class="col-md-25 col-md-offset-9 subsection-header no-bottom-border">Projected</div>
+      <div class="col-md-27 col-md-offset-7 subsection-header no-bottom-border">Projected</div>
     </div>
     <div class="row">
       <div class="col-md-5 subsection-header">Operating Revenues</div>
-      <div class="col-md-2"></div>
-      <div class="col-md-2 align-center"></div>
-      <div class="col-md-3 subsection-header align-center">Year 1</div>
-      <div class="col-md-3 subsection-header align-center">Year 2</div>
-      <div class="col-md-3 subsection-header align-center">Year 3</div>
-      <div class="col-md-3 subsection-header align-center">Year 4</div>
-      <div class="col-md-3 subsection-header align-center">Year 5</div>
+      <div class="col-md-2 col-md-offset-2 subsection-header align-right">Monthly</div>
+      <div class="col-md-3 subsection-header align-right">Year 1</div>
+      <div class="col-md-3 subsection-header align-right">Year 2</div>
+      <div class="col-md-3 subsection-header align-right">Year 3</div>
+      <div class="col-md-3 subsection-header align-right">Year 4</div>
+      <div class="col-md-3 subsection-header align-right">Year 5</div>
     </div>
     <div class="row">
       <div class="col-md-5">Gross Scheduled Rent Income</div>
@@ -24,7 +22,7 @@
       <div class="col-md-5">Vacancy Rate</div>
       <div class="col-md-2 align-right">{{rental_property.operating_expenses_assumption.vacancy_rate | percentage:1}}</div>
       <div class="col-md-2 align-right add-border-bottom">{{vacancy | currency:"$":0}}</div>
-      <div class="col-md-3 align-right" ng-repeat="cost in projected_annual_vacancy_costs track by $index">{{cost | currency:"$":0}}</div>
+      <div class="col-md-3 align-right add-border-bottom" ng-repeat="cost in projected_annual_vacancy_costs track by $index">{{cost | currency:"$":0}}</div>
     </div>
     <div class="row">
       <div class="col-md-5">Net Rental Income</div>
@@ -36,7 +34,7 @@
       <div class="col-md-5">Other Income</div>
       <div class="col-md-2"></div>
       <div class="col-md-2 align-right add-border-bottom">{{other_income | currency:"$":0}}</div>
-      <div class="col-md-3 align-right" ng-repeat="income in projected_other_incomes track by $index">{{income | currency:"$":0}}</div>
+      <div class="col-md-3 align-right add-border-bottom" ng-repeat="income in projected_other_incomes track by $index">{{income | currency:"$":0}}</div>
     </div>
     <div class="row">
       <div class="col-md-5">Gross Income</div>
