--- a/public/investment_properties_pages/rental_properties.html
+++ b/public/investment_properties_pages/rental_properties.html
@@ -1,4 +1,5 @@
 <div class="container" ng-controller="RentalPropertiesListController">
+  <li><a ng-click="signOut()">Sign Out</a></li>
   <table class="table table-striped table-hover">
     <thead>
     <tr class="row">
