Style the login page and tighten up other pages a bit

--- a/public/investment_properties_pages/closing_costs.html
+++ b/public/investment_properties_pages/closing_costs.html
@@ -1,6 +1,6 @@
 <div id="closing-costs" class="top-padded">
   <div class="row">
-    <div class="col-md-24 subsection-header">Closing Costs</div>
+    <div class="col-md-24 subsection-header align-center">Closing Costs</div>
   </div>
   <div id="origination-fee" class="row">
     <span class="col-md-18">Origination Fee</span>
