--- a/public/investment_properties_pages/income_and_cost_projections.html
+++ b/public/investment_properties_pages/income_and_cost_projections.html
@@ -1,6 +1,6 @@
 <div id="income-and-cost-projections" class="top-padded">
   <div class="row">
-    <div class="col-md-24 subsection-header">Income and Cost Projections</div>
+    <div class="col-md-24 subsection-header align-center">Income and Cost Projections</div>
   </div>
   <div id="rent-increases" class="row">
     <div class="col-md-9">Rent Increases</div>
