--- a/public/investment_properties_pages/key_rent_ratios.html
+++ b/public/investment_properties_pages/key_rent_ratios.html
@@ -1,6 +1,6 @@
 <div id="key-rent-ratios">
   <div class="row">
-    <div class="col-md-24 subsection-header">Key Rent Ratios</div>
+    <div class="col-md-24 subsection-header align-center">Key Rent Ratios</div>
   </div>
   <div id="total-square-feet" class="row">
     <span class="col-md-18">Total Square Feet</span>
