--- a/public/investment_properties_pages/operating_income_inputs.html
+++ b/public/investment_properties_pages/operating_income_inputs.html
@@ -1,6 +1,6 @@
 <div id="operating-expenses-inputs" class="top-padded">
   <div class="row">
-    <div class="col-md-24 subsection-header">Monthly Operating Expenses</div>
+    <div class="col-md-24 subsection-header align-center">Monthly Operating Expenses</div>
   </div>
   <div id="vacancy-rate" class="row">
     <span class="col-md-18">Vacancy Rate</span>
