--- a/public/investment_properties_pages/operating_revenues.html
+++ b/public/investment_properties_pages/operating_revenues.html
@@ -1,10 +1,10 @@
 <div id="operating-revenues" class="top-padded">
   <div>
     <div class="row">
-      <div class="col-md-27 col-md-offset-7 subsection-header no-bottom-border">Projected</div>
+      <div class="col-md-27 col-md-offset-7 subsection-header align-center no-bottom-border">Projected</div>
     </div>
     <div class="row">
-      <div class="col-md-5 subsection-header">Operating Revenues</div>
+      <div class="col-md-5 subsection-header align-center">Operating Revenues</div>
       <div class="col-md-2 col-md-offset-2 subsection-header align-right">Monthly</div>
       <div class="col-md-3 subsection-header align-right">Year 1</div>
       <div class="col-md-3 subsection-header align-right">Year 2</div>
