--- a/public/investment_properties_pages/exit_scenarios.html
+++ b/public/investment_properties_pages/exit_scenarios.html
@@ -34,15 +34,15 @@
       <div class="col-md-5 align-right column-header">IRR</div>
     </div>
     <div class="row">
-      <div class="col-md-10 subsection-header">Annualized IRR - 1 Yr</div>
+      <div class="col-md-10 subsection-header align-center">Annualized IRR - 1 Yr</div>
       <div class="col-md-6 align-right">{{one_year_irr | percentage:2}}</div>
     </div>
     <div class="row">
-      <div class="col-md-10 subsection-header">Annualized IRR - 3 Yr</div>
+      <div class="col-md-10 subsection-header align-center">Annualized IRR - 3 Yr</div>
       <div class="col-md-6 align-right">{{three_year_irr | percentage:2}}</div>
     </div>
     <div class="row">
-      <div class="col-md-10 subsection-header">Annualized IRR - 5 Yr</div>
+      <div class="col-md-10 subsection-header align-center">Annualized IRR - 5 Yr</div>
       <div class="col-md-6 align-right">{{five_year_irr | percentage:2}}</div>
     </div>
   </div>
