--- a/public/investment_properties_pages/financing_assumptions.html
+++ b/public/investment_properties_pages/financing_assumptions.html
@@ -1,6 +1,6 @@
 <div id="financing-assumptions">
   <div class="row">
-    <div class="col-md-24 subsection-header">Financing Assumptions</div>
+    <div class="col-md-24 subsection-header align-center">Financing Assumptions</div>
   </div>
   <div class="row" id="total-purchase">
     <span class="col-md-12">Total Purchase</span>
