--- a/public/investment_properties_pages/inputs.html
+++ b/public/investment_properties_pages/inputs.html
@@ -1,7 +1,7 @@
 <div class="row">
-  <div class="col-md-24 subsection-header">Inputs</div>
+  <div class="col-md-24 subsection-header align-center">Inputs</div>
 </div>
-<div class="row subsection-header margin-top-sm">
+<div class="row margin-top-sm">
   <button class="btn btn-primary btn-sm" ng-click="save()">{{persistence_state}}</button>
 </div>
 <div class="margin-top-sm">
