Add a favicon and a navbar

--- a/public/investment_properties_pages/rental_properties.html
+++ b/public/investment_properties_pages/rental_properties.html
@@ -1,9 +1,9 @@
-<div id="rental-properties"
-     class="container flexbox-parent"
-     ng-controller="RentalPropertiesListController">
-  <li>
-    <a ng-click="signOut()">Sign Out</a>
-  </li>
+<div id="rental-properties" class="container flexbox-parent" ng-controller="RentalPropertiesListController">
+  <div class="navbar navbar-default navbar-static-top">
+    <li>
+      <button class="btn btn-default btn-sm" ng-click="signOut()">Sign Out</button>
+    </li>
+  </div>
   <table class="table table-striped table-hover flexbox-item-grow">
     <thead>
     <tr class="row">
