--- a/public/investment_properties_pages/welcome.html
+++ b/public/investment_properties_pages/welcome.html
@@ -1,2 +1,2 @@
-<button ng-click="sign_in()">Sign In</button>
-<button ng-click="sign_up()">Sign Up</button>
+<button class="btn btn-primary btn-sm" ng-click="sign_in()">Sign In</button>
+<button class="btn btn-primary btn-sm" ng-click="sign_up()">Sign Up</button>
