--- a/public/user_registrations/new.html
+++ b/public/user_registrations/new.html
@@ -1,4 +1,4 @@
-<form ng-submit="handleRegBtnClick()" role="form" ng-init="registrationForm = {}">
+<form class="auth-form" ng-submit="handleRegBtnClick()" role="form" ng-init="registrationForm = {}">
   <div class="form-group">
     <label for="email">Email</label>
     <input type="email"
@@ -29,5 +29,7 @@
            class="form-control">
   </div>
 
-  <button type="submit" class="btn btn-primary btn-lg">Register</button>
+  <div class="form-group">
+    <button type="submit" class="btn btn-primary btn-sm sign-in-btn">Register</button>
+  </div>
 </form>
