--- a/public/investment_properties_pages/welcome.html
+++ b/public/investment_properties_pages/welcome.html
@@ -1,2 +1,6 @@
-<button class="btn btn-primary btn-sm" ng-click="sign_in()">Sign In</button>
-<button class="btn btn-primary btn-sm" ng-click="sign_up()">Sign Up</button>
+<div class="faux-modal">
+  <div class="centered">
+    <button class="btn btn-primary btn-sm" ng-click="sign_in()">Sign In</button>
+    <button class="btn btn-primary btn-sm" ng-click="sign_up()">Sign Up</button>
+  </div>
+</div>
