--- a/public/user_registrations/new.html
+++ b/public/user_registrations/new.html
@@ -1,35 +1,37 @@
-<form class="auth-form" ng-submit="handleRegBtnClick()" role="form" ng-init="registrationForm = {}">
-  <div class="form-group">
-    <label for="email">Email</label>
-    <input type="email"
-           name="email"
-           id="email"
-           ng-model="registrationForm.email"
-           required="required"
-           class="form-control">
-  </div>
+<form class="faux-modal" ng-submit="handleRegBtnClick()" role="form" ng-init="registrationForm = {}">
+  <div class="centered">
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="email"
+             name="email"
+             id="email"
+             ng-model="registrationForm.email"
+             required="required"
+             class="form-control">
+    </div>
 
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input type="password"
-           name="password"
-           id="password"
-           ng-model="registrationForm.password"
-           required="required"
-           class="form-control">
-  </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password"
+             name="password"
+             id="password"
+             ng-model="registrationForm.password"
+             required="required"
+             class="form-control">
+    </div>
 
-  <div class="form-group">
-    <label for="password_confirmation">Confirm Password</label>
-    <input type="password"
-           name="password_confirmation"
-           id="password_confirmation"
-           ng-model="registrationForm.password_confirmation"
-           required="required"
-           class="form-control">
-  </div>
+    <div class="form-group">
+      <label for="password_confirmation">Confirm Password</label>
+      <input type="password"
+             name="password_confirmation"
+             id="password_confirmation"
+             ng-model="registrationForm.password_confirmation"
+             required="required"
+             class="form-control">
+    </div>
 
-  <div class="form-group">
-    <button type="submit" class="btn btn-primary btn-sm sign-in-btn">Register</button>
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary btn-sm sign-in-btn">Register</button>
+    </div>
   </div>
 </form>
