--- a/public/investment_properties_pages/rental_properties.html
+++ b/public/investment_properties_pages/rental_properties.html
@@ -1,10 +1,6 @@
 <div id="rental-properties" class="container flexbox-parent" ng-controller="RentalPropertiesListController">
-  <div class="navbar navbar-default navbar-static-top">
-    <li>
-      <button class="btn btn-default btn-sm" ng-click="signOut()">Sign Out</button>
-    </li>
-  </div>
-  <table class="table table-striped table-hover flexbox-item-grow">
+  <navbar></navbar>
+  <table   class="table table-striped table-hover flexbox-item-grow">
     <thead>
     <tr class="row">
       <th class="col-md-2 subsection-header align-left">Street</th>
