--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -1,9 +1,5 @@
 <div id="financing-and-income-assumptions" class="container grid-24-across">
-  <div class="navbar navbar-default navbar-static-top">
-    <li>
-      <button class="btn btn-default btn-sm" ng-click="signOut()">Sign Out</button>
-    </li>
-  </div>
+  <navbar></navbar>
   <div class="col-md-6">
     <inputs></inputs>
   </div>
