Show address on property page

--- a/public/investment_properties_pages/navbar.html
+++ b/public/investment_properties_pages/navbar.html
@@ -1,4 +1,5 @@
 <div class="navbar navbar-default navbar-static-top">
+  <li class="property-address">{{address}}</li>
   <li class="float-right">
     <span class="logged-in-user">{{logged_in_user}}</span>
     <button class="btn btn-default btn-sm" ng-click="signOut()">Sign Out</button>
