Display equity percentage with one decimal place

--- a/public/investment_properties_pages/property_and_loan_information.html
+++ b/public/investment_properties_pages/property_and_loan_information.html
@@ -78,6 +78,7 @@
            id="equity-percentage-input"
            name="equity-percentage-input"
            format="percentage"
+           decimals="1"
            ng-model="rental_property.financing_and_income_assumption.equity_percentage"/>
   </div>
   <div id="loan-interest-rate" class="row">
